--- a/assets/headerstyle.css.liquid
+++ b/assets/headerstyle.css.liquid
@@ -74,6 +74,8 @@ header {
   align-items: center;
   justify-self: center;
   padding: 5px 15px 5px 10px;
+  height: 100%;
+  box-sizing: border-box;
 }
 
 #telephoneicon img {
@@ -94,6 +96,8 @@ header {
   align-items: center;
   justify-self: center;
   padding: 5px 20px 5px 10px;
+  height: 100%;
+  box-sizing: border-box;
 }
 
 #carticon img {
