--- a/snippets/product-item.liquid
+++ b/snippets/product-item.liquid
@@ -1,7 +1,8 @@
 <div>
     <a class="product_link" href="{{ product.url }}">
         <img src="{{ product.featured_image | image_url: width: 400 }}"/>
-        <h3>{{ product. title }}<h3>
+        <h3>{{ product.title }}<h3>
     </a>
     <p>{{ product.price | money }}<p>
+    <p>i have to modify this</p>
 </div>
