--- a/layout/theme.liquid
+++ b/layout/theme.liquid
@@ -1,7 +1,7 @@
 <html>
   <head>
     {{ content_for_header }}
-    {{ 'theme.css' | asset_url | stylesheet_tag }}
+    {{ 'main.css' | asset_url | stylesheet_tag }}
     {{ 'jquery-3.6.0.js' | asset_url | script_tag }}
 
     <link rel="preconnect" href="https://fonts.googleapis.com">
