--- a/templates/collection.liquid
+++ b/templates/collection.liquid
@@ -1,23 +1,26 @@
-{% paginate collection.products by 2 %}
-  <h1>
-    {{ collection.title }}
-  </h1>
+{{ 'collection.css' | asset_url | stylesheet_tag }}
+<div class="mainwrapper">
+  <main>
+    <div class="sale50off">{{ '50_off_sale.jpg' | asset_url | img_tag }}</div>
+    <div class="collheadwrapper">
+      <div class="collheader">
+        <div class="titletext">
+          <p>We have {{ collection.products | size }} items that fits your</p>
+          <h4>{{ collection.metafields.subhead.subheader.value }}</h3>
+        </div>
+        <div class="backtosearch">
+          <a href="/">← Back to search</a>
+        </div>
+      </div>
+    </div>
+    <div class="maincontainer">
+      {% paginate collection.products by 4 %}
+        {% for product in collection.products %}
+          {% render 'product-item', product: product %}
+        {% endfor %}
 
-  <select id="sort-by">
-    {% assign sort_by = collection.sort_by | default: collection.default_sort_by %}
-  
-    {% for option in collection.sort_options %}
-      <option value="{{ option.value }}" {% if option.value == sort_by %}selected="selected"{% endif %}>
-        {{ option.name }}
-      </option>
-    {% endfor %}
-  </select>
-
-  {% for product in collection.products %}
-    {% render 'product-item', product: product %}
-  {% endfor %}
-
-  {{ paginate | default_pagination }}
-{% endpaginate %}
-
-{{ 'sortscript.js' | asset_url | script_tag }}
+        {{ paginate | default_pagination }}
+      {% endpaginate %}
+    </div>
+  </main>
+</div>
