Added css style for product image slider

--- a/assets/collection.css.liquid
+++ b/assets/collection.css.liquid
@@ -1,3 +1,4 @@
+/*#Region CollectionPage*/
 .sale50off,
 .sale50off img {
   width: 100%;
@@ -59,3 +60,66 @@
 .maincontainer {
   width: 100%;
 }
+/*#EndRegion CollectionPage*/
+
+/*#Region Product-Item*/
+
+.product-container {
+  width: 100%;
+  padding: 50px 0 50px 50px;
+  box-sizing: border-box;
+}
+
+.product-wrapper {
+  width: 70%;
+  margin: 0 auto;
+  display: flex;
+  justify-content: space-between;
+  gap: 7%;
+}
+/*#EndRegion Product-Item*/
+.displayed-image,
+.displayed-image img,
+.imgbutton,
+.imgbutton img {
+  border-radius: 50%;
+  cursor: pointer;
+}
+
+.displayed-image {
+  margin-bottom: 25px;
+
+}
+
+.imgselector {
+  display: flex;
+  gap: 5px;
+  justify-content: center;
+  align-items: center;
+}
+
+.imgbutton {}
+/*#Region Product Images*/
+
+/*#EndRegion Product Images*/
+
+/*#Region Product Details*/
+.product-details {
+  color: #00344e;
+}
+
+.product-Subheader {
+  font-size: 14px;
+  text-transform: uppercase;
+  line-height: 30px;
+}
+
+.product-details a {
+  color: #00344e;
+}
+
+.product-details h3 {
+  font-size: 56px;
+  font-weight: 700;
+}
+/*#EndRegion Product Details*/
