--- a/snippets/product-rating.liquid
+++ b/snippets/product-rating.liquid
@@ -1,4 +1,4 @@
-{% assign reviews = product.metafields.starsrating.stars.value %}
+{% assign reviews = product.metafields.specs.starsrating.value %}
 {% if reviews %}
   <style>
     .fa-star {
