--- a/assets/collection.css.liquid
+++ b/assets/collection.css.liquid
@@ -167,4 +167,17 @@
 .regularprice span {
   text-decoration: line-through;
 }
+
+#commentcontainer {
+  overflow: auto;
+}
+
+#commentwrapper {
+  display: flex;
+}
+
+.comment {
+  width: 100%;
+}
+
 /*#EndRegion Product Details*/
