--- a/assets/collection.css.liquid
+++ b/assets/collection.css.liquid
@@ -65,9 +65,13 @@
 /*#Region Product-Item*/
 
 .product-container {
+  background-color: white;
   width: 100%;
-  padding: 50px 0;
+  margin: 25px 0;
+  padding: 25px 0;
+  border-radius: 25px;
   box-sizing: border-box;
+  box-shadow: 0 0 10px 1px rgba(0, 0, 0, 40%);
 }
 
 .product-wrapper {
@@ -143,12 +147,12 @@
 }
 
 .prod-shipment p {
-  line-height: 1.43;
+  line-height: 1.3;
 }
 
 .shipping-details {
   flex-grow: 1;
-  padding: 10px 0;
+  padding: 5px 0;
   box-shadow: 0 -2px 0 0 #ccc inset, 0 2px 0 0 #ccc inset;
 }
 
@@ -158,7 +162,7 @@
 
 .prod-to-cart button {
   color: #fff;
-  padding: 30px 50px;
+  padding: 23px 50px;
   text-transform: uppercase;
   border: none;
   background: #fbcc25;
@@ -168,16 +172,90 @@
   text-decoration: line-through;
 }
 
-#commentcontainer {
+.prod-comments-wrapper {
+  margin: 7% 10% 0 5%;
+}
+
+#commentcontainer,
+#commentauthorcontainer {
   overflow: auto;
 }
 
-#commentwrapper {
+#commentauthorcontainer::-webkit-scrollbar,
+#commentcontainer::-webkit-scrollbar {
+  display: none;
+}
+
+#commentwrapper,
+#commentauthorwrapper {
   display: flex;
 }
 
-.comment {
+.comment,
+.commentauthor {
   width: 100%;
 }
+
+.comment p {
+  font-size: 12px;
+  font-style: italic;
+  line-height: 1.5;
+  color: #888;
+}
+
+.author-slidebtns {
+  width: 100%;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  margin-top: 15px;
+}
+
+#authors {
+  width: 25%;
+  position: relative;
+}
+
+#authors:after {
+  position: absolute;
+  content: "";
+  height: 3px;
+  width: 25%;
+  background: #f26101;
+  left: 5%;
+  top: -50%;
+}
+
+
+.commentauthor {
+  display: flex;
+  justify-content: space-around;
+}
+
+.commentauthor p {
+  font-size: 12px;
+  font-weight: 700;
+}
+
+.authorimg {
+  height: 100%;
+  background-color: #444;
+  border-radius: 50%;
+  width: 26px;
+  border: 2px solid #f26101;
+  box-sizing: border-box;
+}
+
+.slidebtns {
+  padding-right: 20px;
+  display: flex;
+  gap: 10%;
+}
+
+.slidebtns > div {
+  cursor: pointer;
+}
+
+
 
 /*#EndRegion Product Details*/
