--- a/snippets/product-item.liquid
+++ b/snippets/product-item.liquid
@@ -70,7 +70,7 @@
                             </div>
                         </div>
                         <div class="slidebtns">
-                            <div id="cmntslideleft" class="disabledarrow">
+                            <div id="cmntslideleft">
                                 <i class="fa-solid fa-arrow-left"></i>
                             </div>
                             <div id="cmntslideright">
