Changed the elements from using ID attr to CLASS attr
The reason is because the product is repeated couple of times, and the feedbackslider JS was not supporting multiple feedback sections

--- a/assets/collection.css.liquid
+++ b/assets/collection.css.liquid
@@ -103,7 +103,7 @@
   align-items: center;
 }
 
-#prodimgcurrent {
+.prodimgcurrent {
   transition: opacity 0.3s ease-in-out;
 }
 .image-fade-out {
@@ -176,19 +176,19 @@
   margin: 7% 10% 0 5%;
 }
 
-#commentcontainer,
-#commentauthorcontainer {
+.commentcontainer,
+.commentauthorcontainer {
   overflow: auto;
   scroll-snap-type: x mandatory;
 }
 
-#commentauthorcontainer::-webkit-scrollbar,
-#commentcontainer::-webkit-scrollbar {
+.commentauthorcontainer::-webkit-scrollbar,
+.commentcontainer::-webkit-scrollbar {
   display: none;
 }
 
-#commentwrapper,
-#commentauthorwrapper {
+.commentwrapper,
+.commentauthorwrapper {
   display: flex;
 }
 
@@ -213,12 +213,12 @@
   margin-top: 15px;
 }
 
-#authors {
+.authors {
   width: 30%;
   position: relative;
 }
 
-#authors:after {
+.authors:after {
   position: absolute;
   content: "";
   height: 3px;
