Fixed product image swapper
Now the product image swapper JS supports multiple products instead of one

--- a/assets/productitem-imageswap.js.liquid
+++ b/assets/productitem-imageswap.js.liquid
@@ -1,5 +1,5 @@
 function changeImage(img) {
-    var currentImage = document.getElementById('prodimgcurrent');
+    var currentImage = img.parentNode.parentNode.parentNode.querySelector('.prodimgcurrent');
     var newImage = img.getAttribute('data-image');
     var newImageShopifyId = img.getAttribute('data-imageshopifyid');
     if(currentImage.getAttribute('data-imageshopifyid') != newImageShopifyId) {
